--- a/pages/index/index.axml
+++ b/pages/index/index.axml
@@ -1,6 +1,15 @@
 <!-- 小程序收藏组件，更多高级用法请参考文档：https://docs.alipay.com/mini/component/component-favorite -->
-<button catchTap="open">开启</button>
+<!-- <button catchTap="open">开启</button>
 <seltime showFlag="{{showFlag}}"
          onShowpop="onShowpop"
          startData="2019-12-11"
-         selDate="2020-02-01"></seltime>
+         selDate="2020-02-01"></seltime> -->
+<button catchTap="ya">laiya</button>
+ <button catchTap="ya1">laiya1</button>
+<block a:for="{{list}}" a:key="index">
+  <input value="{{item}}" />
+</block>
+
+<block a:for="{{list1}}" a:key="index">
+  <input value="{{item}}" />
+</block>
